# meridian-dns

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  meridian.service  meridian.toml.example
.github/workflows/: build.yml
scripts/: auto-update.sh
src/: blocklist.rs  cache.rs  config.rs  dnssec.rs  listener.rs  main.rs  metrics.rs  stats.rs  threat.rs
src/resolver/: forwarding.rs  mod.rs  recursive.rs
src/tui/: dashboard.rs  mod.rs
