[package]
name = "meridian"
version = "0.3.1"
edition = "2021"
description = "A privacy-focused DNS recursive resolver"

[dependencies]
tokio = { version = "1", features = ["full"] }
hickory-proto = { version = "0.25", features = ["dnssec-ring"] }
rustls = { version = "0.23", features = ["ring"] }
reqwest = { version = "0.12", features = ["rustls-tls", "blocking", "json"], default-features = false }
quinn = "0.11"
ring = "0.17"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio-rustls = "0.26"
webpki-roots = "1"
